--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,8 @@ $bg-color: #111;
 $text-color: #818181;
 $hover-text-color: #f1f1f1;
 
-$vertical-toolbar: "only screen and (max-width: 349px)";
-
+$vertical-toolbar: "only screen and (max-width: 349px), only screen and (min-width: 768px),  only screen and (orientation:landscape)";
 $not-mobile: "only screen and (min-width: 768px)";
+$short-height: "only screen and (max-height: 768px)";
+$tall-height: "only screen and (min-height: 769px)";
+$vertical-toolbar-short-height: "only screen and (max-width: 349px) and (max-height: 550px), only screen and (min-width: 768px) and (max-height: 550px),  only screen and (orientation:landscape) and (max-height: 550px)";
