--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,7 @@
 $bg-color: #111;
 $text-color: #818181;
 $hover-text-color: #f1f1f1;
+$menu-width: 250px;
 
 $vertical-toolbar: "only screen and (max-width: 349px), only screen and (min-width: 768px),  only screen and (orientation:landscape)";
 $not-mobile: "only screen and (min-width: 768px)";
