--- a/src/scss/gear.scss
+++ b/src/scss/gear.scss
@@ -2,7 +2,7 @@
     height: 20px;
     width: 20px;
     background: transparent;
-    box-shadow: inset 0 0 0px 7px dimgray, inset 0 0 0px 8px #444;
+    box-shadow: inset 0 0 0px 5px $text-color, inset 0 0 0px 8px lighten($bg-color, 5%);
     border-radius: 50%;
     position: relative;
     margin: 15px;
@@ -17,16 +17,16 @@
         content: '';
         border-radius: 20%;
         position: absolute;
-        background: dimgray;
+        background: $text-color;
     }
     
     &::before {
-        box-shadow: 10px 10px 0 0 dimgray, -10px 10px 0 0 dimgray, 0 20px 0 0 dimgray;
+        box-shadow: 10px 10px 0 0 $text-color, -10px 10px 0 0 $text-color, 0 20px 0 0 $text-color;
         top: -2px; left: 8px;
     }
     &::after {
         top: 1px; left: 15px;
-        box-shadow: 0px 20px 0 0 dimgray, 10px 10px 0 0 dimgray, -10px 10px 0 0 dimgray;
+        box-shadow: 0px 20px 0 0 $text-color, 10px 10px 0 0 $text-color, -10px 10px 0 0 $text-color;
         @include transform(rotate(45deg));
     }
 }
